--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-GOO
+# Google OAuth credentials
+GOOGLE_CLIENT_ID=358313498074-nkc7bafg3j3fliqvq63m65q3vqlko9df.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+# PostgreSQL database connection
+DB_USER=postgres
+DB_HOST=localhost
+DB_DATABASE=book_notes
+DB_PASSWORD=root
+DB_PORT=5000
+
+# Session secret for express-session
+SESSION_SECRET=your-session-secret
