--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm start"
+    "start": "nodemon index.js"
   },
   "engines": {
     "node": "20.x"
